--- a/tic-tac-toe.css
+++ b/tic-tac-toe.css
@@ -34,6 +34,6 @@
    font-size: 40px;
    padding: 15px 25px;
    width: 90px;
-   background-color: rgb(125, 36, 35);
+   background-color: pink;
    color: #FFF;
 }
